internal/app/testdata/parse_err/main.go
package parseerr

import "github.com/soner3/weld"

type Bad struct{ weld.Component }
